--- a/indexatv.html
+++ b/indexatv.html
@@ -10,7 +10,6 @@
         }
         h1 {
             text-align: center;
-            color: #d48484;
         }
         li {
             list-style-type: none;
@@ -19,7 +18,7 @@
             margin-left: 100px;
             margin-right: 100px;
             overflow: hidden;
-            background-color: #d48484;
+            background-color: #528bc1;
             text-align: center;
             color: rgb(255, 255, 255);
             display: block;
